--- a/app/views/home/error.html.erb
+++ b/app/views/home/error.html.erb
@@ -1,3 +1,2 @@
-<h1>Home#error</h1>
-<p>Find me in app/views/home/error.html.erb</p>
-<p>Something went wrong with connecting to Foursquare.</p>
+<h1>Uh oh! Something went wrong in connecting to Foursquare.</h1>
+<p>Please try again.</p>
