--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<p><a href="/auth/foursquare">Connect to Foursquare</a></p>
+<h1>Twoursquare is a simple mashup of the Twilio and Foursquare APIs.</h1>
+<p>To get started using Twoursquare, simply click the Connect to Foursquare button below. Once you've authorized the app, you'll be given a phone number you can use to check in by phone.</p>
+<div id="connect"><%= link_to image_tag("connect-blue.png"), "/auth/foursquare" %></div>
