--- a/app/views/users/complete.html.erb
+++ b/app/views/users/complete.html.erb
@@ -1,3 +1,2 @@
-<h1>Users#complete</h1>
-<p>Find me in app/views/users/complete.html.erb</p>
-<p>You're connected!</p>
+<h1>Success! You're connected! To use Twoursquare, call (917) 746-8716</h1>
+<p>At the prompt, say "{venue name} in {city}" and then press the pound key. It will help if you speak slowly, however you'll still likely get checked in somewhere that you're not expecting. Good luck!</p>
