--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="container">
+    <div id="logos">
+      <div id="tw_logo"></div>
+      <div id="oursquare_logo"></div>
+    </div>
+    <div id="content">
+      <%= yield %>
+    </div>
+  <div>
 </body>
 </html>
